fixed recommendation engine finer points